// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxWidth: 80 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, 80px) !important;
  grid-gap: 4px !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 230 1`] = `
":host {
  display: grid !important;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, 220px) !important;
  grid-gap: 4px !important;
}"
`;
